@@ -2,15 +2,15 @@ package dat.dtos;
 
 import dat.entities.Candidate;
 import dat.entities.CandidateSkill;
-import lombok.*;
+import dat.entities.Skill;
+import lombok.Getter;
+import lombok.Setter;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 @Setter
-@NoArgsConstructor
-@AllArgsConstructor
-@Builder
 public class CandidateDTO {
     private int id;
     private String name;
@@ -25,7 +25,14 @@ public class CandidateDTO {
         this.education = candidate.getEducation();
 
         this.skills = candidate.getSkillLinks().stream()
-                .map(link -> new SkillDTO(link.getSkill()))
-                .toList();
+                .map(CandidateSkill::getSkill)
+                .collect(Collectors.toMap(
+                        Skill::getId,              // key = skill id
+                        SkillDTO::new,             // value = skill dto
+                        (existing, duplicate) -> existing // keep first if duplicate
+                ))
+                .values()
+                .stream()
+                .collect(Collectors.toList());
     }
 }
